# DD2360

./: .gitignore  README.md
.github/workflows/: documentation.yml
Assignment II/: CMakeLists.txt
Assignment II/ex_1/: vector_add.cu  vector_plot.py
Assignment II/ex_2/: matrix_mult.cu  matrix_plot.py
Assignment III/: CMakeLists.txt
Assignment III/ex_1/: histogram.cu  plot_histogram.py
Assignment III/ex_2/include/: Particles.h
Assignment III/ex_2/src/: Particles.cu
Assignment IV/: CMakeLists.txt
Assignment IV/ex_1/: main.cu
Assignment IV/ex_2/: README.md  compare_segment_size.py  plot.py  stream_add.cu  vector_add.cu
Assignment IV/ex_3/: README.md  heat_equation.cu  plot.py
Bonus Assignment/: CMakeLists.txt
Project/: CMakeLists.txt  Doxyfile  README.md  makefile
Project/CPU/: camera.cpp  camera.h  color.cpp  color.h  hittable.cpp  hittable.h  hittable_list.cpp  hittable_list.h  interval.cpp  interval.h  main.cpp  material.cpp  material.h  ray.cpp  ray.h  sphere.cpp  sphere.h  util.h  vec3.cpp  vec3.h
Project/CPU/include/: camera.h  color.h  hittable.h  hittable_list.h  interval.h  material.h  ray.h  sphere.h  util.h  vec3.h
Project/CPU/src/: camera.cpp  color.cpp  hittable.cpp  hittable_list.cpp  interval.cpp  main.cpp  material.cpp  ray.cpp  sphere.cpp  vec3.cpp
Project/Doxygen/: header.html  index.html  shared_config.doxyfile
Project/Doxygen/CPU/: Doxyfile
Project/Doxygen/GPU/: Doxyfile
Project/GPU/include/: camera.cuh  color.cuh  hittable.cuh  hittable_list.cuh  interval.cuh  material.cuh  precision.cuh  ray.cuh  sphere.cuh  util.cuh  vec3.cuh
Project/GPU/src/: camera.cu  color.cu  hittable.cu  hittable_list.cu  interval.cu  main.cu  material.cu  ray.cu  sphere.cu  vec3.cu
Project/scripts/: benchmark.py
cpu/: README_8md.html  annotated.html  camera_8cpp.html  camera_8cpp__incl.dot  camera_8h.html  camera_8h__dep__incl.dot  camera_8h__incl.dot  camera_8h_source.html  classcamera-members.html  classcamera.html  classcamera__coll__graph.dot  classdielectric-members.html  classdielectric.html  classes.html  classhit__record-members.html  classhit__record.html  classhit__record__coll__graph.dot  classhittable-members.html  classhittable.html  classhittable__inherit__graph.dot  classhittable__list-members.html  classhittable__list.html  classhittable__list__inherit__graph.dot  classinterval-members.html  classinterval.html  classinterval__coll__graph.dot  classlambertian-members.html  classlambertian.html  classmaterial-members.html  classmaterial.html  classmaterial__inherit__graph.dot  classmetal-members.html  classmetal.html  classray-members.html  classray.html  classsphere-members.html  classsphere.html  classsphere__coll__graph.dot  classvec3-members.html  classvec3.html  (+77 more)
cpu/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_8.js  defines_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  functions_0.js  (+41 more)
gpu/: README_8md.html  annotated.html  camera_8cu.html  camera_8cu__incl.dot  camera_8cuh.html  camera_8cuh__dep__incl.dot  camera_8cuh__incl.dot  classcamera-members.html  classcamera.html  classcamera__coll__graph.dot  classdielectric-members.html  classdielectric.html  classdielectric__coll__graph.dot  classes.html  classhittable-members.html  classhittable.html  classhittable__list-members.html  classhittable__list.html  classhittable__list__coll__graph.dot  classinterval-members.html  classinterval.html  classlambertian-members.html  classlambertian.html  classlambertian__inherit__graph.dot  classmaterial-members.html  classmaterial.html  classmetal-members.html  classmetal.html  classmetal__coll__graph.dot  classray-members.html  classray.html  classsphere-members.html  classsphere.html  classsphere__coll__graph.dot  classvec3-members.html  classvec3.html  color_8cu.html  color_8cu__incl.dot  color_8cuh.html  color_8cuh__dep__incl.dot  (+71 more)
gpu/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  files_0.js  files_1.js  (+43 more)
